--- a/practica 5/Terraplanismo/terraplanismo/foro.html
+++ b/practica 5/Terraplanismo/terraplanismo/foro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="cssfinal/cssPrincipal.css">
-    <link rel="stylesheet" href="../terraplanismo/endika_css/cssSecundario.css">
+    <link rel="stylesheet" href="cssfinal/cssForo.css">
     <title>FORO</title>
 </head>
 
@@ -48,15 +48,163 @@
             </nav>
         </div>
         <main>
-            <div id="principal"></div>
+            <div id="principal">
+                <br />
+                <br />
+                <br />
+                <br />
+                <button name="button" id="button">AÑADIR ALGO</button>
+                <div id="for">
+        
+                        <label for="name">Nombre: </label>
+                        <input type="text" id="name" name="user_name">
+                        <br />
+                        <br />
+                        <label for="mail">Email: </label>
+                        <input type="text" id="mail" name="mail">
+                        <br />
+                        <br />
+                        <label for="msg">Comentario: </label>
+                        <textarea id="msg" name="msg"></textarea>
+                        <br />
+                        <br />
+                   
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <div class="comentarios">
+                    <table>
+                        <tr>
+                            <td><img src="img/img-info/icono_fecha.gif"></td>
+                            <th>18-11-2022 07:23</th>
+                            <td><img src="img/img-info/icono_autor.gif"></td>
+                            <th><a href="">Nombre Apellido</a></th>
+                            <td><img src="img/img-info/icono_comentarios.gif"></td>
+                            <th><a href="">Añadir comentario</a></th>
+                        </tr>
+                    </table>
+
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+            </div>
             <div class="secundaria" id="secundaria1"></div>
         </main>
         <footer id="piePagina">
-            <div >
+            <div>
                 <div id="contactoPie">
                     <form action="">
                         <fieldset>
-                        <legend>Contacta con nosotros</legend>
+                            <legend>Contacta con nosotros</legend>
                             <label for="nombre">Nombre</label>
                             <input type="text" id="nombre" name="Nombre" placeholder="Tu Nombre.."><br>
                             <label for="apellido">Apellidos</label>
@@ -97,11 +245,16 @@
                     <p><a href="https://www.terraria.org/" target="_blank">Datos interesantes</a></p>
                 </div>
                 <div id="redesPie">
-                    <p><a href="https://twitter.com/Terraria_Logic" target="_blank"><img src="../terraplanismo/img/twitterIcon.png" alt="Icono de Twitter"></a></p>
-                    <p><a href="https://www.facebook.com/TerrariaOfficial/" target="_blank"><img src="../terraplanismo/img/facebookIcon.png" alt="Icono de Facebook"></a></p>
-                    <p><a href="https://www.reddit.com/r/Terraria/" target="_blank"><img src="../terraplanismo/img/redditIcon.png" alt="Icono de reddit"></a></p>
-                    <p><a href="https://www.youtube.com/@ReLogicOfficial/videos" target="_blank"><img src="../terraplanismo/img/YoutubeIcon.png" alt="Icono de Youtube"></a></p>
-                    <p><a href="https://www.instagram.com/terraria_logic/" target="_blank"><img src="../terraplanismo/img/instagramIcon.png" alt="Icono de Instagram"></a></p>
+                    <p><a href="https://twitter.com/Terraria_Logic" target="_blank"><img
+                                src="../terraplanismo/img/twitterIcon.png" alt="Icono de Twitter"></a></p>
+                    <p><a href="https://www.facebook.com/TerrariaOfficial/" target="_blank"><img
+                                src="../terraplanismo/img/facebookIcon.png" alt="Icono de Facebook"></a></p>
+                    <p><a href="https://www.reddit.com/r/Terraria/" target="_blank"><img
+                                src="../terraplanismo/img/redditIcon.png" alt="Icono de reddit"></a></p>
+                    <p><a href="https://www.youtube.com/@ReLogicOfficial/videos" target="_blank"><img
+                                src="../terraplanismo/img/YoutubeIcon.png" alt="Icono de Youtube"></a></p>
+                    <p><a href="https://www.instagram.com/terraria_logic/" target="_blank"><img
+                                src="../terraplanismo/img/instagramIcon.png" alt="Icono de Instagram"></a></p>
                 </div>
             </div>
         </footer>
