--- a/practica 5/Terraplanismo/terraplanismo/redonda.html
+++ b/practica 5/Terraplanismo/terraplanismo/redonda.html
@@ -20,29 +20,16 @@
             <nav>
                 <ul class="nav">
                     <li><a href="../terraplanismo/index.html">Inicio</a></li>
-                    <li><a href="../terraplanismo/index.html">Terraplanismo</a>
+                    <li><a href="../terraplanismo/terraplanismo.html">Terraplanismo</a>
                         <ul>
                             <li><a href="terraplanismo.html#porque">¿Porque?</a></li>
                             <li><a href="terraplanismo.html#quien">¿Quien?</a></li>
                             <li><a href="terraplanismo.html#famosos">Famosos que nos apoyan</a>
                             </li>
-                            <li><a href="">Submenu4</a>
-                                <ul>
-                                    <li><a href="">Submenu1</a></li>
-                                    <li><a href="">Submenu2</a></li>
-                                    <li><a href="">Submenu3</a></li>
-                                    <li><a href="">Submenu4</a></li>
-                                </ul>
-                            </li>
                         </ul>
                     </li>
                     <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a>
-                        <ul>
-                            <li><a href="">Submenu1</a></li>
-                            <li><a href="">Submenu2</a></li>
-                            <li><a href="">Submenu3</a></li>
-                            <li><a href="">Submenu4</a></li>
-                        </ul>
+                     
                     </li>
                     <li><a href="../terraplanismo/foro.html">Foro</a></li>
                 </ul>
