--- a/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
+++ b/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
@@ -18,7 +18,7 @@
     <nav>
         <ul class="nav">
             <li><a href="../terraplanismo/index.html">Inicio</a></li>
-            <li><a href="../terraplanismo/index.html">Terraplanismo</a>
+            <li><a href="../terraplanismo/terraplanismo.html">Terraplanismo</a>
               <ul>
                 <li><a href="#porque">¿Porque?</a></li>
                 <li><a href="#quien">¿Quien?</a></li>
@@ -27,12 +27,6 @@
             </ul>
             </li>
             <li><a href="../terraplanismo/redonda.html">¿Por qué la Tierra no es plana?</a>
-                <ul>
-                    <li><a href="">Submenu1</a></li>
-                    <li><a href="">Submenu2</a></li>
-                    <li><a href="">Submenu3</a></li>
-                    <li><a href="">Submenu4</a></li>
-                </ul>
             </li>
             <li><a href="../terraplanismo/foro.html">Foro</a></li>
         </ul>
