--- a/practica 5/Terraplanismo/terraplanismo/index.html
+++ b/practica 5/Terraplanismo/terraplanismo/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+  
   <div class="contenedor">
     <div class="contenedor">
       <header>
         <section class="showclase">
-          <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4"></video>
+          <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4" autoplay loop></video>
           <h1 class="titel">Inicio</h1>
         </section>
       </header>
@@ -36,6 +37,7 @@
         </nav>
     </div>
       <div class="clear"></div>
+      <div id="btn"> <a href="index.html#menu">&#x1f30f;</a></div>
       <main>
         <div id="principal">
           <div class="texto">
