--- a/practica 5/Terraplanismo/terraplanismo/redonda.html
+++ b/practica 5/Terraplanismo/terraplanismo/redonda.html
@@ -12,7 +12,7 @@
     <div class="contenedor">
         <header>
             <section class="showclase">
-                <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4"></video>
+                <video src="video/fondos-de-estrellas-de-colores-gif-13 (1).mp4" autoplay loop></video>
                 <h1 class="titel">¿POR QUÉ LA TIERRA NO ES PLANA?</h1>
             </section>
         </header>
@@ -35,6 +35,8 @@
                 </ul>
             </nav>
         </div>
+        <div class="clear"></div>
+        <div id="btn"> <a href="redonda.html#menu">&#x1f30f;</a></div>
         <main>
             <div id="principal">
                 <div id="QueTierra">
