--- a/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
+++ b/practica 5/Terraplanismo/terraplanismo/terraplanismo.html
@@ -33,7 +33,9 @@
     </nav>
 </div>
 <div class="clear"></div>
+<div id="btn"> <a href="terraplanismo.html#menu">&#x1f30f;</a></div>
     <main>
+
       <div id="principal">
         <div id="TerraInfo">
           <div class="tarjeta">
